Menu Small Device

--- a/css/meanmenu.css
+++ b/css/meanmenu.css
@@ -3,7 +3,7 @@
      display: none;
 }
 .mean-container .mean-bar {
-    background: #5293b7;
+    background: #b421a1;
     float: left;
     min-height: 40px;
     padding: 5px 0;
