--- a/css/style.css
+++ b/css/style.css
@@ -276,7 +276,7 @@ p {
      text-decoration: underline !important;
 }
  .main_bt:hover, .main_bt:focus {
-     background: #c96cbc;
+     background: #5293b7;
      color: #fff;
 }
 .button_section {
